--- a/FrontierSharp/FrontierSharp.csproj
+++ b/FrontierSharp/FrontierSharp.csproj
@@ -60,23 +60,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DummyModules\DummyAvatar.cs" />
     <Compile Include="DummyModules\DummyCache.cs" />
     <Compile Include="DummyModules\DummyEnvironment.cs" />
-    <Compile Include="DummyModules\DummyFigure.cs" />
     <Compile Include="DummyModules\DummyInput.cs" />
-    <Compile Include="DummyModules\DummyParticles.cs" />
-    <Compile Include="DummyModules\DummyRegion.cs" />
-    <Compile Include="DummyModules\DummyRenderer.cs" />
-    <Compile Include="DummyModules\DummyScene.cs" />
     <Compile Include="DummyModules\DummyText.cs" />
     <Compile Include="DummyModules\DummySky.cs" />
-    <Compile Include="DummyModules\DummyTextures.cs" />
     <Compile Include="DummyModules\DummyPlayer.cs" />
     <Compile Include="DummyModules\DummyConsole.cs" />
     <Compile Include="DummyModules\DummyGame.cs" />
     <Compile Include="DummyModules\DummyWater.cs" />
-    <Compile Include="DummyModules\DummyWorld.cs" />
     <Compile Include="DummyModules\DummyShaders.cs" />
     <Compile Include="Frontier.cs" />
     <Compile Include="Program.cs" />
@@ -126,6 +118,10 @@
     <Content Include="Resources\Textures\newgrass.pspimage" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Animation\Animation.csproj">
+      <Project>{808790F8-6668-4E82-A1E8-58D2E3E86B95}</Project>
+      <Name>Animation</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Avatar\Avatar.csproj">
       <Project>{690e5640-15e7-4eb0-8189-4735ed9d0d92}</Project>
       <Name>Avatar</Name>
