--- a/Region/Region.csproj
+++ b/Region/Region.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7DD75DA0-F018-42D6-BF27-344CFB8DEB85}</ProjectGuid>
+    <ProjectGuid>{F111EC33-2056-4692-A51B-75A6D61036BB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FrontierSharp.Particles</RootNamespace>
-    <AssemblyName>Particles</AssemblyName>
+    <RootNamespace>FrontierSharp.Region</RootNamespace>
+    <AssemblyName>Region</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -52,25 +52,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DummyParticles.cs" />
-    <Compile Include="ParticlesImpl.cs" />
-    <Compile Include="ParticlesModule.cs" />
-    <Compile Include="ParticlesProperties.cs" />
+    <Compile Include="DummyRegion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegionModule.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="OpenTK.dll.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{889072ad-5c8d-47d9-8fec-05a9ec728be8}</Project>
       <Name>Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Properties\Properties.csproj">
-      <Project>{0d73456a-0969-4ff6-96a2-9435074b9eb8}</Project>
-      <Name>Properties</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="OpenTK.dll.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
