First part of modularisation refactoring * Created INinjectModule's for all existing modules

--- a/Environment/Environment.csproj
+++ b/Environment/Environment.csproj
@@ -52,7 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DummyEnvironment.cs" />
     <Compile Include="EnvironmentImpl.cs" />
+    <Compile Include="EnvironmentModule.cs" />
     <Compile Include="EnvironmentProperties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
