--- a/Region/Region.csproj
+++ b/Region/Region.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="DummyRegion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegionImpl.cs" />
     <Compile Include="RegionModule.cs" />
   </ItemGroup>
   <ItemGroup>
