--- a/Terraform/packages.config
+++ b/Terraform/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MersenneTwister" version="1.0.5" targetFramework="net452" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
+  <package id="OpenTK" version="2.0.0" targetFramework="net452" />
 </packages>
