--- a/World/World.csproj
+++ b/World/World.csproj
@@ -60,6 +60,7 @@
     <Compile Include="WorldModule.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
   </ItemGroup>
