--- a/Region/packages.config
+++ b/Region/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.2.1" targetFramework="net471" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
+  <package id="Ninject.Extensions.Factory" version="3.3.2" targetFramework="net471" />
   <package id="NLog" version="4.4.13" targetFramework="net452" />
   <package id="OpenTK" version="2.0.0" targetFramework="net452" />
 </packages>
