--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Grid\SurfaceTypes.cs" />
     <Compile Include="IBaseModule.cs" />
     <Compile Include="ICache.cs" />
+    <Compile Include="IEntropy.cs" />
     <Compile Include="Input\IInput.cs" />
     <Compile Include="IPlayer.cs" />
     <Compile Include="IRenderable.cs" />
