--- a/Animation/Animation.csproj
+++ b/Animation/Animation.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Anim.cs" />
     <Compile Include="AnimationModule.cs" />
     <Compile Include="Bone.cs" />
-    <Compile Include="BWeight.cs" />
+    <Compile Include="BoneWeights.cs" />
     <Compile Include="DummyFigure.cs" />
     <Compile Include="Figure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
